# sinr

./: Makefile-common.am  Makefile.am  README.md  autogen.sh  configure.ac  cudalt
config/: libtool-2.4.2-as-needed.patch
doc/: Makefile.am  doxygen.am  doxygen.cfg.in
m4/: ax_have_opengl.m4  ax_prog_doxygen.m4  gr_qwt.m4
src/: Makefile.am
src/cmd/: crowncom0-placement.cu  ex0-network.cu  ex1-pattern.cu  exp0-vspixels.cu  exp1-vsnodes.cu  exp2-spatialcapacity.cu  exp3-placement.cu  sinrmap-demo.cu  sinrvis-test.cu  test0-radiationpattern.cu  test1-spatialdensity.cu  test2-associationzones.cu  test3-histogram.cu  test4-optioniterator.cpp  vis0-placement.cu  wifius0-modesvbands.cu
src/sinr/: Makefile.am  arena.h  bitmap.h  coordinates.cuh  functors.cuh  gui.cu  gui.h  histogram.cuh  network.h  networkmetrics.cuh  optioniterator.h  radiationpattern.cuh  spatialdensity.cuh  types.h  util.cpp  util.h  visualizer.cuh
tests/: README  test-HstDevCoordRandom.cu
